--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -141,6 +141,15 @@
 
     <!-- End of ActionBar style -->
 
+    <style name="Theme.Transparent" parent="android:Theme.Holo.Light">
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:backgroundDimEnabled">false</item>
+    </style>
+
     <style name="DropDownItem"
            parent="android:Widget.Holo.Light.DropDownItem.Spinner">
         <item name="android:textAppearance">
