Material style for EditText widgets

--- a/app/src/main/res/layout/dialog_generate_password.xml
+++ b/app/src/main/res/layout/dialog_generate_password.xml
@@ -26,111 +26,119 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
-    <ScrollView
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
 
-        <LinearLayout
-            android:orientation="vertical"
+        <RelativeLayout
+            android:id="@+id/tag_layout"
+            android:layout_marginTop="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <RelativeLayout
-                android:id="@+id/tag_layout"
-                android:layout_marginTop="@dimen/activity_vertical_margin"
-                android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                android:layout_marginRight="@dimen/activity_horizontal_margin"
-                android:layout_width="match_parent"
-                android:layout_height="48dp">
-
-                <TextView
-                    android:id="@+id/tag_favicon"
-                    android:textAllCaps="true"
-                    android:layout_width="32dp"
-                    android:layout_height="match_parent"
-                    android:textColor="@android:color/white"
-                    android:layout_marginRight="8dp"
-                    android:gravity="center"
-                    android:layout_gravity="center_vertical"/>
-
-                <AutoCompleteTextView
-                    android:id="@+id/tag_text"
-                    android:inputType="text"
-                    android:singleLine="true"
-                    android:maxLines="1"
-                    android:maxLength="25"
-                    android:paddingRight="48dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:completionThreshold="2"
-                    android:layout_toLeftOf="@id/tag_settings"
-                    android:layout_toRightOf="@id/tag_favicon"
-                    android:hint="@string/tag"/>
-
-                <ImageButton
-                    android:id="@+id/tag_settings"
-                    android:src="@drawable/ic_action_gear"
-                    android:contentDescription="@string/tag_settings"
-                    android:enabled="false"
-                    android:visibility="invisible"
-                    android:layout_width="48dp"
-                    android:layout_height="match_parent"
-                    android:layout_centerVertical="true"
-                    android:layout_alignParentRight="true"
-                    style="?android:borderlessButtonStyle"/>
-            </RelativeLayout>
-
-
-            <RelativeLayout
-                android:id="@+id/master_key_layout"
-                android:layout_width="match_parent"
-                android:layout_height="48dp"
-                android:layout_marginTop="@dimen/activity_vertical_margin"
-                android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                android:layout_marginRight="@dimen/activity_horizontal_margin"
-                android:layout_below="@+id/tag_layout">
-
-                <ImageView
-                    android:id="@+id/ic_key"
-                    android:src="@drawable/ic_action_key"
-                    android:contentDescription="@string/master_key"
-                    android:layout_width="32dp"
-                    android:layout_height="match_parent"
-                    android:layout_centerVertical="true"
-                    android:layout_alignParentLeft="true"/>
-
-                <EditText
-                    android:id="@+id/master_key_text"
-                    android:inputType="textPassword"
-                    android:fontFamily="sans-serif"
-                    android:singleLine="true"
-                    android:maxLines="1"
-                    android:maxLength="25"
-                    android:layout_toLeftOf="@+id/identicon"
-                    android:layout_toRightOf="@+id/ic_key"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:hint="@string/master_key"/>
-
-                <ImageView
-                    android:id="@+id/identicon"
-                    android:layout_width="48dp"
-                    android:layout_height="match_parent"
-                    android:paddingLeft="8dp"
-                    android:paddingRight="8dp"
-                    android:layout_centerVertical="true"
-                    android:layout_alignParentRight="true"
-                    android:gravity="center"/>
-            </RelativeLayout>
+            android:layout_height="48dp">
 
             <TextView
-                android:id="@+id/website_password"
+                android:id="@+id/tag_favicon"
+                android:textAllCaps="true"
+                android:layout_width="48dp"
+                android:layout_height="match_parent"
+                android:textColor="@android:color/white"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
                 android:gravity="center"
+                android:text="A"
+                android:layout_gravity="center_vertical"/>
+
+            <AutoCompleteTextView
+                android:id="@+id/tag_text"
+                android:inputType="text"
+                android:singleLine="true"
+                android:maxLines="1"
+                android:maxLength="25"
                 android:layout_width="match_parent"
-                android:text="Website password"
-                android:layout_height="48dp"/>
-        </LinearLayout>
+                android:layout_height="48dp"
+                android:completionThreshold="2"
+                android:layout_toLeftOf="@id/tag_settings"
+                android:layout_toRightOf="@id/tag_favicon"
+                android:background="@drawable/background_edittext_material"
+                android:paddingBottom="0dp"
+                android:paddingTop="0dp"
+                android:hint="@string/tag"/>
+
+            <ImageButton
+                android:id="@+id/tag_settings"
+                android:src="@drawable/ic_action_gear"
+                android:contentDescription="@string/tag_settings"
+                android:enabled="false"
+                android:visibility="invisible"
+                android:layout_width="48dp"
+                android:layout_height="match_parent"
+                android:layout_centerVertical="true"
+                android:layout_alignParentRight="true"
+                style="?android:borderlessButtonStyle"/>
+        </RelativeLayout>
+
+
+        <RelativeLayout
+            android:id="@+id/master_key_layout"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+            android:layout_marginRight="@dimen/activity_horizontal_margin"
+            android:layout_below="@+id/tag_layout">
+
+            <ImageView
+                android:id="@+id/ic_key"
+                android:src="@drawable/ic_action_key"
+                android:contentDescription="@string/master_key"
+                android:layout_width="48dp"
+                android:layout_height="match_parent"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp"
+                android:layout_centerVertical="true"
+                android:layout_alignParentLeft="true"/>
+
+            <EditText
+                android:id="@+id/master_key_text"
+                android:inputType="textPassword"
+                android:fontFamily="sans-serif"
+                android:singleLine="true"
+                android:maxLines="1"
+                android:maxLength="25"
+                android:layout_toLeftOf="@+id/identicon"
+                android:layout_toRightOf="@+id/ic_key"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/background_edittext_material"
+                android:hint="@string/master_key"/>
+
+            <ImageView
+                android:id="@+id/identicon"
+                android:layout_width="48dp"
+                android:layout_height="match_parent"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp"
+                android:layout_centerVertical="true"
+                android:layout_alignParentRight="true"
+                android:gravity="center"/>
+        </RelativeLayout>
+
+        <TextView
+            android:id="@+id/website_password"
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:text="Website password"
+            android:layout_height="48dp"/>
+    </LinearLayout>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1">
 
     </ScrollView>
 
