New input font size (material design guidelines)

--- a/app/src/main/res/layout/dialog_generate_password.xml
+++ b/app/src/main/res/layout/dialog_generate_password.xml
@@ -66,6 +66,7 @@
                 android:background="@drawable/background_edittext_material"
                 android:paddingBottom="0dp"
                 android:paddingTop="0dp"
+                android:textSize="@dimen/text_input"
                 android:hint="@string/tag"/>
 
             <ImageButton
@@ -114,6 +115,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@drawable/background_edittext_material"
+                android:textSize="@dimen/text_input"
                 android:hint="@string/master_key"/>
 
             <ImageView
