--- a/app/src/main/res/layout/dialog_generate_password.xml
+++ b/app/src/main/res/layout/dialog_generate_password.xml
@@ -43,14 +43,12 @@
             <TextView
                 android:id="@+id/tag_favicon"
                 android:textAllCaps="true"
-                android:layout_width="48dp"
-                android:layout_height="match_parent"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_marginRight="24dp"
                 android:textColor="@android:color/white"
-                android:paddingLeft="16dp"
-                android:paddingRight="16dp"
-                android:gravity="center"
-                android:text="A"
-                android:layout_gravity="center_vertical"/>
+                android:layout_centerVertical="true"
+                android:gravity="center"/>
 
             <AutoCompleteTextView
                 android:id="@+id/tag_text"
@@ -96,10 +94,9 @@
                 android:id="@+id/ic_key"
                 android:src="@drawable/ic_action_key"
                 android:contentDescription="@string/master_key"
-                android:layout_width="48dp"
+                android:layout_width="24dp"
                 android:layout_height="match_parent"
-                android:paddingLeft="8dp"
-                android:paddingRight="8dp"
+                android:layout_marginRight="24dp"
                 android:layout_centerVertical="true"
                 android:layout_alignParentLeft="true"/>
 
@@ -132,8 +129,10 @@
         <TextView
             android:id="@+id/website_password"
             android:gravity="center"
-            android:layout_width="match_parent"
             android:text="Website password"
+            android:textSize="@dimen/text_medium"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:layout_width="match_parent"
             android:layout_height="48dp"/>
     </LinearLayout>
 
