--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,8 +5,8 @@
              android:layout_width="match_parent"
              android:layout_height="match_parent">
 
-    <ListView
-        android:id="@+id/new_tag_list"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/tag_list"
         android:divider="@drawable/tag_list_divider"
         android:layout_marginTop="@dimen/activity_vertical_margin"
         android:choiceMode="singleChoice"
