Add pressed color in tag list

--- a/app/src/main/res/layout/main_tag_list_item.xml
+++ b/app/src/main/res/layout/main_tag_list_item.xml
@@ -3,6 +3,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="horizontal"
               android:layout_width="match_parent"
+              android:background="@drawable/background_tag_list"
               android:layout_height="48dp">
 
     <TextView
