--- a/app/src/main/res/layout/dialog_generate_password.xml
+++ b/app/src/main/res/layout/dialog_generate_password.xml
@@ -65,6 +65,7 @@
                 android:paddingBottom="0dp"
                 android:paddingTop="0dp"
                 android:textSize="@dimen/text_input"
+                android:imeOptions="actionNext"
                 android:hint="@string/tag"/>
 
             <ImageButton
@@ -113,6 +114,7 @@
                 android:layout_height="match_parent"
                 android:background="@drawable/background_edittext_material"
                 android:textSize="@dimen/text_input"
+                android:imeOptions="actionDone"
                 android:hint="@string/master_key"/>
 
             <ImageView
