--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -41,7 +41,8 @@
 
     <style name="Theme.Hashmypass" parent="@android:style/Theme.Holo.Light.DarkActionBar">
         <!-- Needed for emulator bug - Holo light color is white instead of gray -->
-        <item name="android:windowBackground">@color/holo_light_background</item>
+        <item name="android:windowBackground">@color/holo_light_background
+        </item>
         <item name="android:actionBarItemBackground">
             @drawable/selectable_background_hashmypass
         </item>
@@ -141,15 +142,6 @@
 
     <!-- End of ActionBar style -->
 
-    <style name="Theme.Transparent" parent="android:Theme.Holo.Light">
-        <item name="android:windowIsTranslucent">true</item>
-        <item name="android:windowBackground">@android:color/transparent</item>
-        <item name="android:windowContentOverlay">@null</item>
-        <item name="android:windowNoTitle">true</item>
-        <item name="android:windowIsFloating">true</item>
-        <item name="android:backgroundDimEnabled">false</item>
-    </style>
-
     <style name="DropDownItem"
            parent="android:Widget.Holo.Light.DropDownItem.Spinner">
         <item name="android:textAppearance">
@@ -157,21 +149,11 @@
         </item>
     </style>
 
-    <style name="hashButtonStyle" parent="@android:style/ButtonBar">
-        <item name="android:background">@drawable/button_background</item>
-        <item name="android:textColor">@color/button_text_color</item>
-    </style>
-
     <style
         name="tutorialStyle"
-        parent="android:style/Theme.Holo.Light.NoActionBar" />
+        parent="android:style/Theme.Holo.Light.NoActionBar"/>
 
     <style name="tutorialLayoutStyle">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">match_parent</item>
-    </style>
-
-    <style name="defaultProfileLayoutStyle">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">match_parent</item>
     </style>
