--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -39,7 +39,8 @@
 
 <resources>
 
-    <style name="Theme.Hashmypass" parent="@android:style/Theme.Holo.Light.DarkActionBar">
+    <style name="Theme.Hashmypass"
+           parent="@android:style/Theme.Holo.Light.DarkActionBar">
         <!-- Needed for emulator bug - Holo light color is white instead of gray -->
         <item name="android:windowBackground">@color/holo_light_background
         </item>
@@ -72,6 +73,20 @@
             @style/Theme.Hashmypass.Widget
         </item>
 
+    </style>
+
+    <style name="AlertDialog.Hashmypass"
+           parent="@android:style/Theme.Holo.Light.DarkActionBar">
+        <item name="android:windowFrame">@null</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowAnimationStyle">
+            @android:style/Animation.Dialog
+        </item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowSoftInputMode">stateUnspecified|adjustPan
+        </item>
+        <item name="android:colorBackgroundCacheHint">@null</item>
     </style>
 
     <style name="ActionBar.Solid.Hashmypass" parent="@android:style/Widget.Holo.Light.ActionBar.Solid.Inverse">
