Use EditText instead of AutocompleteTextView for tag name

--- a/app/src/main/res/layout/dialog_generate_password.xml
+++ b/app/src/main/res/layout/dialog_generate_password.xml
@@ -50,7 +50,7 @@
                 android:layout_centerVertical="true"
                 android:gravity="center"/>
 
-            <AutoCompleteTextView
+            <EditText
                 android:id="@+id/tag_text"
                 android:inputType="text"
                 android:singleLine="true"
@@ -58,7 +58,6 @@
                 android:maxLength="25"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
-                android:completionThreshold="2"
                 android:layout_toLeftOf="@id/tag_settings"
                 android:layout_toRightOf="@id/tag_favicon"
                 android:background="@drawable/background_edittext_material"
