--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -48,7 +48,8 @@
                 android:inputType="text"
                 android:id="@+id/profile_name_text"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="48dp"
+                android:background="@drawable/background_edittext_material"
                 android:maxLines="1"
                 android:singleLine="true"
                 android:maxLength="@integer/text_profile_name_max_length"/>
@@ -65,7 +66,8 @@
                 android:inputType="text"
                 android:id="@+id/private_key_text"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="48dp"
+                android:background="@drawable/background_edittext_material"
                 android:singleLine="true"
                 android:maxLines="1"
                 android:maxLength="@integer/text_private_key_max_length"/>
