--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -37,6 +37,9 @@
     <dimen name="tutorial_splash_image_size">144dp</dimen>
     <dimen name="tutorial_content_image_padding_horizontal">32dp</dimen>
     <dimen name="tutorial_content_image_padding_vertical">48dp</dimen>
+    <dimen name="tutorial_content_padding_vertical">48dp</dimen>
+    <dimen name="tutorial_content_text_margin_top">32dp</dimen>
+    <dimen name="tutorial_content_text_padding_inter">16dp</dimen>
     <dimen name="tutorial_content_height">144dp</dimen>
     <dimen name="tutorial_content_header_height">48dp</dimen>
     <dimen name="tutorial_content_content_height">96dp</dimen>
@@ -58,4 +61,16 @@
     <dimen name="text_medium">18sp</dimen>
     <dimen name="text_large">22sp</dimen>
     <dimen name="text_input">16sp</dimen>
+
+    <!-- Tutorial intro dimensions -->
+    <dimen name="tutorial_intro_animator_master_key_in">-48dp</dimen>
+    <dimen name="tutorial_intro_lock_icon_width">48dp</dimen>
+    <dimen name="tutorial_intro_lock_icon_height">48dp</dimen>
+    <dimen name="tutorial_intro_lock_icon_margin_left">24dp</dimen>
+    <dimen name="tutorial_intro_key_icon_width">48dp</dimen>
+    <dimen name="tutorial_intro_key_icon_height">24dp</dimen>
+    <dimen name="tutorial_intro_key_icon_margin_left">16dp</dimen>
+    <dimen name="tutorial_intro_key_icon_margin_top">18dp</dimen>
+    <dimen name="tutorial_intro_edit_text_height">48dp</dimen>
+    <dimen name="tutorial_intro_edit_text_padding_bottom">12dp</dimen>
 </resources>
