--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,22 +1,23 @@
 <!--
     * Copyright 2014 Red Dye No. 2
     *
-    * This file is part of Hash My pass.
+    * This file is part of Twik.
     *
-    * Hash my pass is free software: you can redistribute it and/or modify
+    * Twik is free software: you can redistribute it and/or modify
     * it under the terms of the GNU General Public License as published by
     * the Free Software Foundation, either version 3 of the License, or
     * (at your option) any later version.
     *
-    * Hash my pass is distributed in the hope that it will be useful,
+    * Twik is distributed in the hope that it will be useful,
     * but WITHOUT ANY WARRANTY; without even the implied warranty of
     * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     * GNU General Public License for more details.
     *
     * You should have received a copy of the GNU General Public License
-    * along with Hash my pass.  If not, see <http://www.gnu.org/licenses/>.
+    * along with Twik.  If not, see <http://www.gnu.org/licenses/>.
     *
     -->
+
 
 <resources>
     <!-- Default screen margins, per the Android Design guidelines. -->
