--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -21,9 +21,10 @@
 
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:paddingTop="@dimen/activity_vertical_margin">
+                xmlns:custom="http://schemas.android.com/apk/res-auto"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:paddingTop="@dimen/activity_vertical_margin">
 
     <ScrollView
         android:layout_above="@+id/button_bar_layout"
@@ -54,6 +55,28 @@
                 android:maxLines="1"
                 android:singleLine="true"
                 android:maxLength="@integer/text_profile_name_max_length"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/color"
+                android:textAllCaps="true"
+                android:layout_marginTop="@dimen/activity_vertical_margin"
+                android:layout_marginBottom="16dp"
+                android:textColor="@color/text_gray"/>
+
+            <HorizontalScrollView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <com.reddyetwo.hashmypass.app.ColorPaletteView
+                    android:id="@+id/profile_color"
+                    custom:colors="@array/favicon_background_colors"
+                    custom:accent_color="@color/item_focused"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+            </HorizontalScrollView>
 
             <TextView
                 android:layout_width="wrap_content"
