--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -66,6 +66,7 @@
                 android:textColor="@color/text_gray"/>
 
             <HorizontalScrollView
+                android:id="@+id/profile_color_scrollview"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
