--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,13 +26,16 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/tag_list"
+        android:layout_gravity="top"
         android:choiceMode="singleChoice"
+        android:alpha="0"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
     <LinearLayout
         android:id="@+id/list_empty"
-        android:visibility="gone"
+        android:layout_gravity="top"
+        android:alpha="0"
         android:orientation="vertical"
         android:gravity="center_vertical"
         android:layout_width="match_parent"
