--- a/app/src/main/res/values-port/dimens.xml
+++ b/app/src/main/res/values-port/dimens.xml
@@ -22,4 +22,6 @@
 <resources>
     <dimen name="activity_top_margin">96dp</dimen>
     <dimen name="activity_vertical_margin_large">48dp</dimen>
+    <dimen name="list_empty_top_vertical_margin">112dp</dimen>
+    <dimen name="list_empty_middle_vertical_margin">40dp</dimen>
 </resources>
